connect 2 mongooes and create modeld and database

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
-    "ejs": "^3.1.10"
+    "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
+    "mongoose": "^8.9.2"
   }
 }
